--- a/package.json
+++ b/package.json
@@ -41,5 +41,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "https://news-api-ei5a.vercel.app"
 }
